...
                        CircularProgressBar(title: progressInfo.title, value: progressInfo.value, total: progressInfo.total)
                            .frame(height: 140.0)
                            .padding(.top, 40)
                        
                    
                        NavigationLink(destination: FitnessStatisticsView(currentWeekProgress: $currentWeekProgress)) {
                            Text("See all statistics")
                                .font(.caption)
                                .fontWeight(.bold)
                                .foregroundColor(.blue)
                                .padding(.top, 0)
                                .accessibility(identifier: "See all statistics")
                        }
...
